# gpu_cad

./: .gitignore  Cargo.toml  README.md  index.js  package.json  webpack.config.js
src/: lib.rs  logging.rs
src/geometry/: curve.rs  mesh.rs  mod.rs  surface.rs  vertex.rs
src/linear_algebra/: frustum.rs  mat3.rs  mat4.rs  mod.rs  plane.rs  ray.rs  utils.rs  vec3.rs  vec4.rs
src/render/: pipeline.rs  renderer.rs
src/render/shaders/: shader.wgsl
src/scene/: camera.rs  camera_descriptor.rs  camera_interface.rs  handles.rs  mod.rs  scene.rs  scene_interface.rs
src/tests/math/: mat3.rs  mat4.rs  vec3.rs  vec4.rs
src/widgets/: mod.rs
tests/: lib.rs
tests/math/: mod.rs
