[package]
name = "hello_world"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"
rust-version = "1.57"

[lib]
crate-type = ["cdylib", "rlib"]

[build]
target = "wasm32-unknown-unknown"

[dependencies]
bytemuck = { version = "1.12", features = ["derive"] }
cfg-if = "1"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "0.18", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element",
  "HtmlElement",
  "Node",
] }


[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
wasm-bindgen-test = "0.3"
