[package]
name = "gpu_nurbs"
version = "0.1.0"
authors = ["Nicholas Drian"]
edition = "2021"
rust-version = "1.57"

[lib]
crate-type = ["cdylib", "rlib"]

[build]
# this aint working
target = "wasm32-unknown-unknown"

[dependencies]
bytemuck = { version = "1.12", features = ["derive"] }
cfg-if = "1"
winit = "0.28"
env_logger = "0.10"
testing = "0.35"
log = "0.4"
pollster = "0.3"
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "0.18", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element",
  "HtmlElement",
  "Node",
] }
lazy_static = "1.4.0"


[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
